<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TastyPlanner</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="NewRecipe_Name">Recipe Name</string>
    <string name="NewRecipe_Ingredients">Ingredients</string>
    <string name="NewRecipe_Directions">Directions</string>
    <string name="NewRecipe_PrepareTime">Prepare Time</string>
    <string name="NewRecipe_Servings">Number of Servings</string>
    <string name="NewRecipe_Tags">Tags</string>
    
    <string name="meals_past_text1"><u>Cleared on March 2, 2013</u></string>
    <string name="meals_past_text2"><u>Cleared on February 16, 2013</u></string>
    
    <string name="Meals_FindRecipe">Find Recipe</string>
    <string name="Recipe_Add">Adding 1 Meal to Meal Plan (12 Ingredients)</string>

    <string name="NewRecipe_Name_Hint">Enter recipe name</string>
    <string name="NewRecipe_Ingredients_Hint1">Please list one item per line, e.g.</string>
    <string name="NewRecipe_Ingredients_Hint2">1/2 cup Sugar</string>
    <string name="NewRecipe_Ingredients_Hint3">1 Green Bell Pepper</string>
    <string name="NewRecipe_Ingredients_Hint4">1 Tbs Vegetable Oil</string>
    <string name="NewRecipe_Directions_Hint1">Typical recipes use between 4-10 steps</string>
    <string name="NewRecipe_Directions_Hint2">Preheat Oven 375 degrees</string>
    <string name="NewRecipe_Directions_Hint3">In small mixing bowl, add...</string>
    <string name="NewRecipe_PrepareTime_Hint">Please list in 15-minute intervals e.g. \n
        									Ready in 1 hour and 15 minutes</string>
    <string name="NewRecipe_Servings_Hint">Serving size (2, 4, 8, ?)</string>
    <string name="NewRecipe_Tags_Hint">#GlutenFree #Healthy #Simple</string>
    
</resources>